<resources>
    <string name="app_name">Runova_v_1</string>
    <string name="ngffgnf">TODO</string>
    <string name="ff">.</string>
    <string name="todo">TODO</string>
    <string name="jjhgjgf">TODO</string>
    <string name="start">start</string>
    <string name="Placee">Места</string>
    <string name="bbbbb">TODO</string>
    <string name="gdsgs">TODO</string>
    <string name="hdfhdh">TODO</string>
    <string name="jjhj">TODO</string>
    <string name="gwrew">TODO</string>
    <string name="yyyyre">TODO</string>
    <string name="see">озеро</string>
    <string name="camping">отдых</string>
    <string name="city">город</string>
    <string name="vodopad">водопад</string>
    <string name="ffsa">горы</string>
</resources>